# dk_electricity_forecasting

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.pipeline  Dockerfile.web  Makefile  README.md  constraints-production.txt  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
config/: evaluation_splits.example.json  production.json
docs/: aws-deployment-plan.md  codebase-tour.md  data-card.md  evaluation.md  forecasting-contract.md  model-card-chronos-v1.md  operations.md  plan.md  production_learning_plan.md
notebooks/: 01_eds_processing_walkthrough.ipynb  02_eds_price_panel_eda.ipynb  03_baseline_model_development.ipynb  04_catboost_model_development.ipynb  04_open_meteo_weather_eda.ipynb  05_catboost_model_development.ipynb  05_open_meteo_weather_eda.ipynb  06_chronos2_experimental_forecasts.ipynb  06_weather_catboost_feature_exploration.ipynb  README.md
scripts/: build_open_meteo_weather_features.py  build_price_panel.py  build_static_dashboard.py  build_weather_backtest_frame.py  build_weather_experiment_frame.py  container_entrypoint.py  fetch_eds_prices.py  fetch_open_meteo_previous_runs.py  run_baseline_backtest.py  run_catboost_backtest.py  run_cloud_pipeline.py  run_cloud_scoring.py  run_daily_pipeline.py  run_evaluation_arena.py  run_model_comparison.py  run_publish_forecast.py  run_recent_diagnostics.py  run_weather_feature_backtest.py  score_published_forecasts.py  train_chronos_lora.py
tests/: test_catboost_scripts.py  test_catboost_tuning.py  test_cloud_pipeline.py  test_daily_pipeline.py  test_dashboard.py  test_eds_prices_v1.py  test_energidataservice_client.py  test_evaluation_arena.py  test_feature_sets.py  test_fetch_eds_prices_script.py  test_fetch_open_meteo_script.py  test_forecasting_library.py  test_infra_deadline_check.py  test_layout.py  test_model_artifact_integrity.py  test_model_comparison.py  test_open_meteo_source.py  test_open_meteo_weather_v1.py  test_operational_hardening.py  test_price_features.py  test_production_artifacts.py  test_production_models.py  test_production_publish_flow.py  (+9 more)
(+83 files in other folders)
