[project]
name = "dk-energy-forecasts"
version = "0.1.0"
description = "Data and forecasting pipeline for Danish electricity markets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=12.0",
  "requests>=2.31",
]

[project.optional-dependencies]
notebooks = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]
catboost = [
  "catboost>=1.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
