[project]
name = "dk-energy-forecasts"
version = "0.1.0"
description = "Data and forecasting pipeline for Danish electricity markets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=12.0",
  "requests>=2.31",
]

[project.optional-dependencies]
app = [
  "streamlit>=1.35",
]
notebooks = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]
dev = [
  "pytest>=8.0",
]
catboost = [
  "catboost>=1.2",
]
tuning = [
  "catboost>=1.2",
  "optuna>=4.0",
]
chronos = [
  "chronos-forecasting[extras]>=2.2",
]
boosting = [
  "catboost>=1.2",
  "optuna>=4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
