[project]
name = "dk-energy-forecasts"
version = "0.1.0"
description = "Data and forecasting pipeline for Danish electricity markets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=12.0",
  "requests>=2.31",
]

[project.optional-dependencies]
notebooks = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
]
catboost = [
  "catboost>=1.2",
]
tuning = [
  "catboost>=1.2",
  "optuna>=4.0",
]
chronos = [
  "chronos-forecasting>=2.2",
  "peft>=0.18.1",
]
aws = [
  "boto3>=1.34",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "F401"]
"scripts/*.py" = ["E402"]
